# getattrlistbulk-rs

./: Cargo.toml  IMPLEMENTATION.md  LICENSE-APACHE  LICENSE-MIT  README.md  SPECIFICATION.md
benches/: traversal.rs
src/: builder.rs  error.rs  ffi.rs  iter.rs  lib.rs  parser.rs  types.rs
tests/: ffi_tests.rs  integration_tests.rs  parser_tests.rs
